# imu_3dm_gx3

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: Imu3dmGx3.params
launch/: imu_3dm_gx3_node.launch  imu_3dm_gx3_nodelet.launch
launch/params/: imu_3dm_gx3_parameters.yaml
src/: imu_3dm_gx3.cc
src/imu_3dm_gx3/: device.hpp  helpers.hpp  imu_3dm_gx3.cpp  imu_3dm_gx3.hpp  imu_3dm_gx3_node.cpp  imu_3dm_gx3_nodelet.cpp
