<package format="2">
  <name>imu_3dm_gx3_ros_tool</name>
  <version>1.0.0</version>
  <description>The imu_3dm_gx3 ROS interface.</description>

  <maintainer email="sascha.wirges@kit.edu">Sascha Wirges</maintainer>

  <author>Nathan Michael</author>
  <author>Sascha Wirges</author>
  <license>BSD</license>
  <url>https://github.com/KIT-MRT/imu_3dm_gx3</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>gtest</test_depend>

  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>

  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>rosparam_handler</depend>
  <depend>utils_ros</depend>
  
  <export>
  <nodelet plugin="${prefix}/nodelet_plugins.xml" /></export>
</package>